tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float32_4D_input_and_filter_tensors_options_outputPadding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D input and filter tensors options.outputPadding, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f32[1, 1, 3, 3];
  }

  consts {
    operand_0: f32[1, 2, 3, 3] @bytes([123, 135, 92, 63, 210, 115, 32, 63, 110, 251, 34, 63, 124, 152, 86, 63, 199, 102, 243, 61, 110, 252, 125, 63, 139, 54, 168, 62, 5, 206, 95, 63, 234, 117, 56, 63, 43, 238, 122, 63, 106, 183, 124, 61, 75, 223, 164, 62, 26, 243, 63, 63, 170, 64, 201, 62, 40, 111, 13, 62, 232, 84, 145, 62, 72, 224, 216, 62, 224, 83, 20, 62]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[1, 1], outputSizes=null, padding=[], strides=[3, 2]);
  }

  outputs { convTranspose2dOutput; }
}
