tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float32_4D_input_and_filter_tensors_options_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D input and filter tensors options.padding, litert
 conv_transpose2d :: convTranspose2d float32 4D input and filter tensors options.padding: index 0: actual=0 expected=0.2787136 ulp=1049539469 tolerance=16384
  inputs: convTranspose2dInput: [0.5872158408164978, 0.6077792048454285, 0.017289165407419205, 0.2614607512950897]; convTranspose2dFilter: [0.3292713165283203, 0.5866857171058655, 0.29701370000839233, 0.0033378428779542446] (constant)
  expected convTranspose2dOutput: [0.2787136]
  actual convTranspose2dOutput: [0]
  expected convTranspose2dOutput full nd:
(shape [1, 1, 1, 1])
  [0.2787136]
  actual convTranspose2dOutput full nd:
(shape [1, 1, 1, 1])
  [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f32[1, 1, 2, 2];
  }

  consts {
    operand_0: f32[1, 1, 2, 2] @bytes([64, 150, 168, 62, 9, 49, 22, 63, 46, 18, 152, 62, 182, 191, 90, 59]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[1, 1, 1, 1], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
